; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_tlsmthread.c___mingwthr_key_dtor.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_tlsmthread.c___mingwthr_key_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__mingw_usemthread_dll = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__mingwthr_key_dtor(i32 %0, void (i8*)* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca void (i8*)*, align 8
  store i32 %0, i32* %4, align 4
  store void (i8*)* %1, void (i8*)** %5, align 8
  %6 = load void (i8*)*, void (i8*)** %5, align 8
  %7 = icmp ne void (i8*)* %6, null
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load i32, i32* @__mingw_usemthread_dll, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %8
  %12 = load i32, i32* %4, align 4
  %13 = load void (i8*)*, void (i8*)** %5, align 8
  %14 = call i32 @___w64_mingwthr_add_key_dtor(i32 %12, void (i8*)* %13)
  store i32 %14, i32* %3, align 4
  br label %17

15:                                               ; preds = %8
  br label %16

16:                                               ; preds = %15, %2
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %16, %11
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @___w64_mingwthr_add_key_dtor(i32, void (i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
